@@ -1,5 +1,7 @@
 git-annex (10.20240431) UNRELEASED; urgency=medium
 
+  * fsck: Fix recent reversion that made it say it was checksumming files
+    whose content is not present.
   * Typo fixes.
     Thanks, Yaroslav Halchenko
 
